[package]
name = "earthquaked"
version = "0.1.0"
authors = ["Hirochika Matsumoto <git@hirochika.dev>"]
edition = "2018"
description = "An earthquake monitoring daemon"
repository = "https://github.com/mhirochika/earthquaked"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
async-trait = "0.1.50"
chrono = "0.4.19"
eyre = "0.6.5"
reqwest = { version = "0.11.3", features = ["json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_yaml = "0.8.17"
thiserror = "1.0.24"
tokio = { version = "1.5.0", features = ["full"] }
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
